--- a/static/style.css
+++ b/static/style.css
@@ -48,7 +48,7 @@
   width: 100%;
   top: 0;
   left: 0;
-  color: white;
+  color: var(--light-tile-bg);
 }
 
 .site-header h1,
@@ -236,6 +236,7 @@ a:hover {
   max-width: 800px;
   position: relative;
   text-align: center;
+  color: var(--light-main-text);
 }
 
 .modal-pic {
